--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "next": "12.0.7",
     "opensea-js": "^1.2.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "web3": "^1.6.1"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "eslint": "8.6.0",
